--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   audioplayers: ^0.15.1
   material_switch: ^0.0.8
   analog_clock: ^0.0.1
+  youtube_player_flutter: ^7.0.0+7
+  photo_view: ^0.10.2
+  draggable_bottom_sheet: ^0.1.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
