--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   material_switch: ^0.0.8
   analog_clock: ^0.0.1
   youtube_player_flutter: ^7.0.0+7
+#  flutter_vlc_player: ^5.0.0
   photo_view: ^0.10.2
   draggable_bottom_sheet: ^0.1.2
   # The following adds the Cupertino Icons font to your application.
