--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,8 @@ dependencies:
   material_switch: ^0.0.8
   analog_clock: ^0.0.1
   youtube_player_flutter: ^7.0.0+7
-  date_format: ^2.0.2
-  get: ^4.1.3
+#  date_format: ^2.0.2
+#  get: ^4.1.3
 #  flutter_vlc_player: ^5.0.0
   photo_view: ^0.10.2
   draggable_bottom_sheet: ^0.1.2
