--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
 #  get: ^4.1.3
 #  flutter_vlc_player: ^5.0.0
   photo_view: ^0.10.2
+  smooth_star_rating: ^1.1.1
   draggable_bottom_sheet: ^0.1.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
