--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   analog_clock: ^0.0.1
   youtube_player_flutter: ^7.0.0+7
   lottie: ^0.7.0
+  syncfusion_flutter_gauges: ^18.2.44
 #  date_format: ^2.0.2
 #  get: ^4.1.3
 #  flutter_vlc_player: ^5.0.0
@@ -48,6 +49,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
+  fl_chart: ^0.36.1
 
 dev_dependencies:
   flutter_test:
@@ -116,9 +118,27 @@ flutter:
           style: italic
         - asset: assets/fonts/Bariol_Bold.otf
           weight: 700
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/Montserrat-Regular.ttf
+        - asset: assets/fonts/Montserrat-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/Montserrat-ThinItalic.ttf
+          weight: 100
+          style: italic
+        - asset: assets/fonts/Montserrat-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Montserrat-LightItalic.ttf
+          weight: 300
+          style: italic
+        - asset: assets/fonts/Montserrat-SemiBold.ttf
+          weight: 500
+        - asset: assets/fonts/Montserrat-Bold.ttf
+          weight: 700
 
   assets:
     - assets/
+    - assets/bg/
     - assets/lottie/
     - assets/images/
     - assets/images/sss/
