--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
   fl_chart: ^0.36.1
+  share: ^0.6.5+4
+  
 
 dev_dependencies:
   flutter_test:
