--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   photo_view: ^0.10.2
   smooth_star_rating: ^1.1.1
   draggable_bottom_sheet: ^0.1.2
+  flutter_fortune_wheel: ^0.3.6
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
