--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   youtube_player_flutter: ^7.0.0+7
   lottie: ^0.7.0
   syncfusion_flutter_gauges: ^18.2.44
+  flutter_spinning_wheel : ^1.0.0
 #  date_format: ^2.0.2
 #  get: ^4.1.3
 #  flutter_vlc_player: ^5.0.0
