--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   share: ^0.6.5+4
   confetti: ^0.5.5
   sqflite: ^2.0.0+3
+  cloud_firestore:
 
 dev_dependencies:
   flutter_test:
