--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   audioplayers: ^0.15.1
   velocity_x: ^1.4.1
   flutter_open_whatsapp: ^0.1.2
+  razorpay_flutter: ^1.2.7
 
 dev_dependencies:
   flutter_test:
