--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,4 +56,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.firebase:firebase-messaging:20.1.6'
     implementation 'com.razorpay:checkout:1.6.8'
+    implementation platform('com.google.firebase:firebase-bom:28.4.1')
+    implementation 'com.google.firebase:firebase-auth'
 }
