--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   audioplayers: ^0.15.1
   velocity_x: ^1.4.1
   razorpay_flutter: ^1.2.7
+  modal_bottom_sheet: ^2.0.0
 
 dev_dependencies:
   flutter_test:
